--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/pjenkin/NodeTutorialSocketio#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
